# shop_app

./: .gitignore  README.md  pyproject.toml
database/: docker-compose.yaml
shop_app/: manage.py  utils.py
shop_app/auth_app/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  utils.py  views_api.py
shop_app/auth_app/admin/: __init__.py  user.py
shop_app/auth_app/api_views/: avatar_user.py  login_user.py  logout_user.py  password_user.py  profile_user.py  register_user.py
shop_app/auth_app/migrations/: 0001_initial.py  0002_alter_profile_name.py  0002_alter_profile_phone.py  0003_profile_name_profile_patronymic_profile_surname.py  0004_alter_profile_name.py  0005_profile_email_alter_profile_avatar_and_more.py
shop_app/auth_app/models/: profile.py
shop_app/auth_app/serializers/: avatar.py  login_user.py  password.py  profile.py  register_user.py
shop_app/auth_app/tests/: utils.py
shop_app/order_app/: urls.py
shop_app/order_app/admin/: __init__.py  basket.py  order.py
shop_app/order_app/api_views/: utils.py
shop_app/order_app/migrations/: 0001_initial.py  0002_basket_user_alter_basket_product.py  0003_basket_session_id_alter_basket_user.py  0004_remove_basket_session_id.py  0005_basket_session_id.py  0006_alter_basket_session_id.py  0007_alter_basket_session_id.py  0008_alter_basket_session_id.py  0009_alter_basket_count.py  0010_basket_created_at.py  0011_basket_fixed_price_order_basket_order.py  0012_alter_order_address_alter_order_city_and_more.py  0014_order_paid_for.py  (+2 more)
shop_app/product_app/: apps.py  models.py  signals.py  urls.py
shop_app/shop_app/: asgi.py  settings.py  urls.py  wsgi.py
(+102 files in other folders)
