[tool.poetry]
name = "shop-app"
version = "0.1.0"
description = ""
authors = ["AlexSokolov <speaker04@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
diploma-frontend = {path = "diploma-frontend/dist/diploma-frontend-0.6.tar.gz"}
django = "^5.1.4"
djangorestframework = "^3.15.2"
pillow = "^11.0.0"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"
django-stubs = "^5.1.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true